# chess

./: Cargo.toml
src/: bin.rs
src/chess/: board.rs  color.rs  game.rs  mod.rs  movement.rs  piece.rs
src/chess/board/: square.rs  tile.rs
src/chess/game/: classic.rs  mod.rs
src/chess/movement/: absolute_position.rs  chess_notation.rs  diagonal.rs  generate_valid_moves.rs  line.rs  mod.rs  relative_position.rs
src/chess/piece/: bishop.rs  king.rs  knight.rs  pawn.rs  queen.rs  rook.rs
