[package]
name = "better_chess"
version = "0.1.0"
edition = "2021"

[lib]
name = "better_chess"
path = "src/lib.rs"

[[bin]]
name = "better_chess"
path = "src/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.4"
rand = "0.8.5"
